--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,36 +1,38 @@
-name: Generate Contribution Snake
+name: Generate Snake
+
 on:
-  push:
-    branches: [ main, master ]
+  schedule:
+    - cron: "0 0 * * *"   # Runs every day at midnight
   workflow_dispatch:
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
-      - name: Checkout repo
+      - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Generate Snake SVG
+        uses: Platane/snk@v3
+        id: snake
         with:
-          fetch-depth: 0
+          github_user_name: YOUR_USERNAME
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Push Snake to Output Branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          node-version: 18
-
-      - name: Install snake generator
-        run: |
-          npm i -g github-contribution-grid-snake
-
-      - name: Generate contribution snake
-        run: |
-          mkdir -p output
-          github-contribution-grid-snake -u ${{ github.repository_owner }} -o output/github-contribution-grid-snake.svg
-
-      - name: Commit snake
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add output/github-contribution-grid-snake.svg || true
-          git commit -m "chore: add contribution snake" || echo "no changes to commit"
-          git push
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
